# voxels-bevy

./: Cargo.toml  todo.txt
src/: camera.rs  entity_deform.rs  main.rs  observers.rs  procedural_entity.rs  resources.rs  ui.rs
src/common/: constants.rs  coords.rs  coords_iterators.rs  coords_neighbours.rs  coords_neighbours_iter.rs  math.rs  mod.rs  vertex.rs  voxel_material.rs  voxels.rs
src/entity_mesh/: entity_mesh.rs  mod.rs
src/marching_cubes/: mod.rs  table.rs
