[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "1.0"
rand = "*"
bevy_mod_raycast = "0.18.0"
bevy_egui = "0.24.0"
avian3d = "0.2"

[dependencies.bevy]
version = "0.15.1"
features = [
  "bevy_mesh_picking_backend"
] 

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

